--- a/.env.example
+++ b/.env.example
@@ -1,10 +1,8 @@
-# Anthropic API Key (required)
-# Get your API key from: https://console.anthropic.com/
-ANTHROPIC_API_KEY=your-api-key-here
+# API Key (required)
+OPENAI_API_KEY=your-api-key-here
 
-# Optional: Custom workspace directory
-# WORKSPACE_ROOT=/path/to/your/workspace
+# Base URL (optional, for proxy)
+OPENAI_BASE_URL=https://your-proxy-url
 
-# Optional: Docker configuration
-# ENABLE_DOCKER=false
-# DOCKER_IMAGE=python:3.11-slim
+# Model name (optional)
+MODEL_NAME=claude-sonnet-4-5-20250929
