--- a/.env.example
+++ b/.env.example
@@ -6,3 +6,12 @@ OPENAI_BASE_URL=https://your-proxy-url
 
 # Model name (optional)
 MODEL_NAME=claude-sonnet-4-5-20250929
+
+# Web search & fetch API keys (optional, for web middleware)
+EXA_API_KEY=your-exa-api-key
+FIRECRAWL_API_KEY=your-firecrawl-api-key
+JINA_AI_API_KEY=your-jina-api-key
+TAVILY_API_KEY=your-tavily-api-key
+
+# LangSmith tracing (optional)
+LANGSMITH_API_KEY=your-langsmith-api-key
