--- a/pyproject.toml
+++ b/pyproject.toml
@@ -37,6 +37,8 @@ dependencies = [
     "duckduckgo-search>=8.1.1",
     "langgraph-cli[inmem]>=0.4.12",
     "httpx>=0.28.1",
+    "pyyaml>=6.0",
+    "pydantic>=2.0",
 ]
 
 [project.optional-dependencies]
