--- a/pyproject.toml
+++ b/pyproject.toml
@@ -39,6 +39,7 @@ dependencies = [
     "httpx>=0.28.1",
     "pyyaml>=6.0",
     "pydantic>=2.0",
+    "langchain-mcp-adapters>=0.1.0",
 ]
 
 [project.optional-dependencies]
