refactor: redesign profile config with proper parameter scoping
- Change tools → tool (singular, agent/tool/mcp hierarchy)
- Move parameters to actual scope: max_file_size to read_file/grep_search level
- Move API keys to tool level: tavily/exa/firecrawl → web_search, jina → read_url_content
- Move default_timeout to run_command level
- Remove architecture-level params from config: enable_audit_log, prompt_caching, allowed_extensions, block_dangerous_commands, prefer_system_tools
- Update all profile files to new structure
- Maintain backward compatibility via CLI parameters

--- a/profiles/mcp-enabled.yaml
+++ b/profiles/mcp-enabled.yaml
@@ -2,7 +2,7 @@ agent:
   model: claude-sonnet-4-5-20250929
   workspace_root: ~/Desktop/project/v1/文稿/project/leon/test_workspace
 
-tools:
+tool:
   filesystem:
     enabled: false
   command:
