--- a/profiles/default.yaml
+++ b/profiles/default.yaml
@@ -1,58 +1,53 @@
 agent:
   model: "claude-sonnet-4-5-20250929"
   workspace_root: null
-  read_only: false
-  enable_audit_log: true
 
 system_prompt: null
 
-tools:
-  prompt_caching:
-    enabled: true
-    ttl: "5m"
-    min_messages_to_cache: 0
-
+tool:
   filesystem:
     enabled: true
-    max_file_size: 10485760  # 10MB in bytes
-    allowed_extensions: null
-    read_file: true
-    write_file: true
-    edit_file: true
-    multi_edit: true
-    list_dir: true
+    tools:
+      read_file:
+        enabled: true
+        max_file_size: 10485760  # 10MB in bytes
+      write_file: true
+      edit_file: true
+      multi_edit: true
+      list_dir: true
 
   search:
     enabled: true
     max_results: 50
-    max_file_size: 10485760  # 10MB in bytes
-    prefer_system_tools: true
-    grep_search: true
-    find_by_name: true
+    tools:
+      grep_search:
+        enabled: true
+        max_file_size: 10485760  # 10MB in bytes
+      find_by_name: true
 
   web:
     enabled: true
-    max_search_results: 5
     timeout: 15
-    tavily_api_key: null  # fallback to TAVILY_API_KEY env var
-    exa_api_key: null     # fallback to EXA_API_KEY env var
-    firecrawl_api_key: null  # fallback to FIRECRAWL_API_KEY env var
-    jina_api_key: null    # fallback to JINA_AI_API_KEY env var
-    web_search: true
-    read_url_content: true
-    view_web_content: true
+    tools:
+      web_search:
+        enabled: true
+        max_results: 5
+        tavily_api_key: null  # fallback to TAVILY_API_KEY env var
+        exa_api_key: null     # fallback to EXA_API_KEY env var
+        firecrawl_api_key: null  # fallback to FIRECRAWL_API_KEY env var
+      read_url_content:
+        enabled: true
+        jina_api_key: null    # fallback to JINA_AI_API_KEY env var
+      view_web_content: true
 
   command:
     enabled: true
-    default_timeout: 120
-    block_dangerous_commands: true
-    block_network_commands: false
-    run_command: true
-    command_status: true
+    tools:
+      run_command:
+        enabled: true
+        default_timeout: 120
+      command_status: true
 
 mcp:
   enabled: false
   servers: {}
-
-skills:
-  enabled: false
