feat: add per-skill configuration control
- Add skills dict to SkillsConfig for per-skill enable/disable
- Pass enabled_skills to SkillsMiddleware
- Check skill enabled status before loading
- Create disabled-skill for testing
- Update skills-enabled.yaml with example configuration
- Verified: disabled skills return error message

--- a/profiles/skills-enabled.yaml
+++ b/profiles/skills-enabled.yaml
@@ -19,3 +19,6 @@ skills:
   enabled: true
   paths:
     - ./skills
+  skills:
+    example-skill: true
+    disabled-skill: false  # Disable specific skill
