refactor: separate LangGraph CLI entry, add tool priority in system prompt
- Move LangGraph CLI entry to langgraph_app.py (was inline in agent.py)
- Add rule 5: prefer built-in tools over MCP tools with same functionality
- User system_prompt now appends to built-in prompt instead of replacing
- Remove langgraph-cli dependency (langgraph core still used)
- Clean up unused profile files

--- a/profiles/default.yaml
+++ b/profiles/default.yaml
@@ -49,9 +49,17 @@ tool:
       command_status: true
 
 mcp:
-  enabled: false
-  servers: {}
+  enabled: true
+  servers:
+    filesystem:
+      command: npx
+      args: ["-y", "@modelcontextprotocol/server-filesystem", "/Users/apple/Desktop/project/v1/文稿/project/leon"]
 
 skills:
-  enabled: false
-  paths: []
+  enabled: true
+  paths:
+    - ./skills
+  skills:
+    example-skill: true
+    disabled-skill: false  # Disable specific skill
+
