Daytona: unify PTY path and document api_url

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -48,8 +48,8 @@ pptx = ["python-pptx>=1.0.0"]
 docs = ["pymupdf>=1.24.0", "python-pptx>=1.0.0"]
 sandbox = ["wuying-agentbay-sdk>=0.10.0"]
 e2b = ["e2b>=2.13.0"]
-daytona = ["daytona-sdk>=0.10.0"]
-all = ["pymupdf>=1.24.0", "python-pptx>=1.0.0", "wuying-agentbay-sdk>=0.10.0", "e2b>=2.13.0", "daytona-sdk>=0.10.0"]
+daytona = ["daytona-sdk>=0.10.0", "python-socks>=2.7.0"]
+all = ["pymupdf>=1.24.0", "python-pptx>=1.0.0", "wuying-agentbay-sdk>=0.10.0", "e2b>=2.13.0", "daytona-sdk>=0.10.0", "python-socks>=2.7.0"]
 
 [project.scripts]
 leonai = "tui.leon_cli:main"
