fix(build): update package names from middleware to core in pyproject.toml
- Replace all middleware.* package references with core.*
- Fixes 'package directory middleware does not exist' error
- Enables proper package installation with uv

This was causing backend startup failures when using 'uv run' because
the build system was looking for the old middleware/ directory that
was renamed to core/ in previous commits.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -63,24 +63,24 @@ Issues = "https://github.com/Ju-Yi-AI-Lab/leonai/issues"
 packages = [
     "agents",
     "config",
-    "middleware",
-    "middleware.command",
-    "middleware.command.hooks",
-    "middleware.command.bash",
-    "middleware.command.zsh",
-    "middleware.command.powershell",
-    "middleware.filesystem",
-    "middleware.filesystem.read",
-    "middleware.filesystem.read.readers",
-    "middleware.queue",
-    "middleware.memory",
-    "middleware.skills",
-    "middleware.monitor",
-    "middleware.task",
-    "middleware.todo",
-    "middleware.web",
-    "middleware.web.fetchers",
-    "middleware.web.searchers",
+    "core",
+    "core.command",
+    "core.command.hooks",
+    "core.command.bash",
+    "core.command.zsh",
+    "core.command.powershell",
+    "core.filesystem",
+    "core.filesystem.read",
+    "core.filesystem.read.readers",
+    "core.queue",
+    "core.memory",
+    "core.skills",
+    "core.monitor",
+    "core.task",
+    "core.todo",
+    "core.web",
+    "core.web.fetchers",
+    "core.web.searchers",
     "sandbox",
     "sandbox.interfaces",
     "sandbox.providers",
