--- a/pyproject.toml
+++ b/pyproject.toml
@@ -61,8 +61,9 @@ Issues = "https://github.com/Ju-Yi-AI-Lab/leonai/issues"
 
 [tool.setuptools]
 packages = [
-    "agents",
     "config",
+    "config.defaults",
+    "config.defaults.agents",
     "core",
     "core.command",
     "core.command.hooks",
@@ -90,7 +91,7 @@ packages = [
 py-modules = ["agent", "agent_profile"]
 
 [tool.setuptools.package-data]
-"agents" = ["*.md"]
+"config.defaults.agents" = ["*.md"]
 
 [tool.ruff]
 line-length = 120
