--- a/pyproject.toml
+++ b/pyproject.toml
@@ -37,6 +37,7 @@ dependencies = [
     "langchain-openai>=1.1.7",
     "duckduckgo-search>=8.1.1",
     "httpx>=0.28.1",
+    "fastapi>=0.129.0",
     "pyyaml>=6.0",
     "pydantic>=2.0",
     "langchain-mcp-adapters>=0.1.0",
