refactor: remove AgentProfile legacy code from agent.py
- Delete all profile-related imports, parameters, methods, and branches
- Remove _load_profile(), _apply_cli_overrides(), _create_default_profile()
- Simplify all if/else config/profile branches to config-only paths
- Remove agent_profile from pyproject.toml py-modules
- Update test to use create_leon_agent() instead of AgentProfile

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -92,7 +92,7 @@ packages = [
     "eval",
     "eval.harness",
 ]
-py-modules = ["agent", "agent_profile"]
+py-modules = ["agent"]
 
 [tool.setuptools.package-data]
 "config.defaults.agents" = ["*.md"]
